tests/baselines/reference/parserSkippedTokens7.errors.txt
tests/cases/conformance/parser/ecmascript5/SkippedTokens/parserSkippedTokens7.ts(1,9): error TS1127: Invalid character.


==== tests/cases/conformance/parser/ecmascript5/SkippedTokens/parserSkippedTokens7.ts (1 errors) ====
    /*foo*/ \ /*bar*/
            
!!! error TS1127: Invalid character.